# ai-service-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/agents/: orchestra.py
app/agents/experts/: tools_expert.py
app/db/: vector_search.py
app/routers/: ai_router.py
app/services/: ai_service.py
app/tools/: apis.yaml
docs/: USAGE_GUIDE.md
src/: main.py  test_api.py  test_cases.txt
src/ai_engine/: config.py  main.py
src/ai_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ai_engine/agents/: orchestra.py
src/ai_engine/api/: dependencies.py
src/ai_engine/api/routes/: chat_routes.py
src/ai_engine/core/: config.py  logging.py  server_logging.py
src/ai_engine/db/: vector_search.py
src/ai_engine/repositories/: vectorstore.py
src/ai_engine/schemas/: ai_schema.py  chat_schema.py
src/ai_engine/services/: ai_service.py
src/ai_engine/services/agents/: orchestra.py  state.py
src/ai_engine/services/agents/experts/: process_expert.py  table_expert.py
src/ai_engine/services/agents/experts/dynamic_router/: dr_floor_1.py
src/ai_engine/services/database/: mongo_manager.py
src/ai_engine/services/scripts/: ingest_schema.py
src/ai_engine/tools/: load_tools.py  training_apis.yaml
src/ai_tech_support_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: main.py
src/app/routers/: ai_router.py
src/tests/: llm_test.py  test_orchestra.py
