[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]

[project]
name = "ai_tech_support_agent"
authors = [
    {name = "Khoi Le", email = "khoile5464205@gmail.com"}
]
version = "0.1.0"
description = "Sendo Tech Support AI Agent Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "langchain-ollama",
    "pymongo",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_engine*", "app*"]
namespaces = false

[project.scripts]
sendo-server = "app.main:start"